# Stock-Data-Pipeline

./: pyproject.toml
src/stock_data_pipeline/: main.py
