[project]
name = "stock-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MELLO", email = "ing.matiasgays@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pylint>=3.3.9",
    "rich>=14.1.0",
]

[project.scripts]
stock-data-pipeline = "stock_data_pipeline.main:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
